--- a/oes-core/src/main/resources/templates/teacher/include/sider.html
+++ b/oes-core/src/main/resources/templates/teacher/include/sider.html
@@ -83,7 +83,7 @@
 
                 <!-- 考试管理 -->
                 <li class="nav-item">
-                    <a href="/teacher/exam" class="nav-link  ${strutil.contain(name,'paper')?'active':''}">
+                    <a href="/teacher/exam" class="nav-link  ${strutil.contain(name,'exam')?'active':''}">
                         <i class="nav-icon fa fa-clock-o"></i>
                         <p>考试管理</p>
                     </a>
