--- a/oes-core/src/main/resources/templates/teacher/major/list.html
+++ b/oes-core/src/main/resources/templates/teacher/major/list.html
@@ -41,17 +41,14 @@
                                 <h3 class="card-title">课程内容</h3>
                                 <div class="card-tools">
                                     <div class="input-group input-group-sm">
-                                        <button onclick="goSave()" class="btn btn-info btn-sm"><i
-                                                class="fa fa-plus"></i>&nbsp;新增课程
-                                        </button>
+                                        <button onclick="goSave()" class="btn btn-default btn-sm"><i class="fa fa-plus-circle"></i>&nbsp;新增课程 </button>
                                     </div>
                                 </div>
                             </div>
                             <div class="card-header">
                                 <div class="card-tools">
                                     <div class="input-group">
-                                        <select class="form-control academySelect"
-                                                name="findAcademy" id="findAcademy">
+                                        <select class="form-control academySelect" name="findAcademy" id="findAcademy">
                                             <!-- 填入数据 -->
                                         </select>
                                     </div>
@@ -59,8 +56,7 @@
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body table-responsive p-0">
-                                <table id="example2" class="table table-bordered table-striped dataTable table-head-fixed text-nowrap" role="grid"
-                                       aria-describedby="example2_info">
+                                <table class="table table-bordered table-striped dataTable table-head-fixed text-nowrap">
                                     <tbody>
                                     <tr>
                                         <th style="width:17%">序号</th>
