--- a/oes-core/src/main/resources/templates/teacher/paper/api/paper-form-list-api.html
+++ b/oes-core/src/main/resources/templates/teacher/paper/api/paper-form-list-api.html
@@ -5,7 +5,7 @@
         OesUtil.confirm("确定删除该模版么?", function () {
             $.get("/api/paperForm/delete/" + id).done(function (data) {
                 if (data.state === "success") {
-                    window.location.href = "/teacher/paperForm";
+                    window.location.reload();
                 } else {
                     toastr.error(data.message);
                 }
