--- a/oes-core/src/main/resources/templates/teacher/paper/update-answer-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/paper/update-answer-modal.html
@@ -14,7 +14,7 @@
                        <input type="text" readonly="readonly" name="id" class="form-control" placeholder="题目编号" id="update-answer-id">
                    </div>
                    <div class="form-group">
-                       <input type="text" name="answer" class="form-control" id="update-answer-answer" placeholder="题目答案">
+                       <textarea type="text" name="answer" rows="6" class="form-control" id="update-answer-answer" placeholder="题目答案"></textarea>
                    </div>
                </form>
             </div>
