--- a/oes-core/src/main/resources/templates/teacher/exam/update-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/exam/update-modal.html
@@ -3,15 +3,13 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title">修改时间</h4>
+                <h4 class="modal-title">修改试卷信息</h4>
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
             <form id="update-form">
                 <div class="modal-body">
                     <div class="form-group form_datetime">
-                        <label>试卷编号</label>
-                        <input type="text" name="id" class="form-control"
+                        <input type="hidden" name="id" class="form-control"
                                id="id" readonly="readonly">
                     </div>
                     <div class="form-group form_datetime">
@@ -26,18 +24,17 @@
                     </div>
                     <div class="form-group form_datetime">
                         <label>开始时间</label>
-                        <input type="text" name="beginTime" class="form-control"
-                               id="datepicker">
+                        <input type="text" name="beginTime" class="form-control" id="beginTime">
                     </div>
                     <div class="form-group form_datetime">
                         <label>结束时间</label>
-                        <input type="text" name="endTime" class="form-control" id="datepicker2">
+                        <input type="text" name="endTime" class="form-control" id="endTime">
                     </div>
                 </div>
             </form>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="updateBtn">确定</button>
+                <button type="button" class="btn btn-primary" onclick="updatePaperInfo()">确定</button>
             </div>
         </div>
     </div>
