--- a/oes-core/src/main/resources/templates/teacher/paper/save-paper-form.html
+++ b/oes-core/src/main/resources/templates/teacher/paper/save-paper-form.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OES | 新增试卷</title>
     <!-- 引入全局 css 文件 -->
-    <%
-    include("../../include/css.html"){}
-    %>
+    <%include("../../include/css.html"){}%>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
@@ -17,93 +15,129 @@
     <% layout("../../teacher/include/sider.html",{name:"save-paper-form"}){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
-        <section class="content">
-            <div class="box">
-                <div class="box-header with-border">
-                    <h3 class="box-title">新增试卷模版</h3>
-                    <div class="box-tools pull-right">
-                        <a href="/teacher/paper" class="btn btn-primary btn-sm"><i
-                                class="fa fa-arrow-left"></i>
-                            返回列表</a>
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1>新增试卷模版</h1>
+                    </div>
+                    <div class="col-sm-6">
+                        <ol class="breadcrumb float-sm-right">
+                            <li class="breadcrumb-item"><a href="/teacher/paper">返回列表</a></li>
+                        </ol>
                     </div>
                 </div>
-                <div class="box-body">
-                    <form method="post" id="save-paper-form" class="form-horizontal">
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">单选题</label>
-                            <label class="col-sm-2 control-label">数量</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control" name="qChoiceNum">
-                                <input type="hidden" class="form-control" name="teacherId"
-                                       value="${session.teacher.id}">
-                            </div>
-                            <label class="col-sm-2 control-label">每题分数</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control" name="qChoiceScore">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">多选题</label>
-                            <label class="col-sm-2 control-label">数量</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control" name="qMulChoiceNum">
-                            </div>
-                            <label class="col-sm-2 control-label">每题分数</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control" name="qMulChoiceScore">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">判断题</label>
-                            <label class="col-sm-2 control-label">数量</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control" name="qTofNum">
-                            </div>
-                            <label class="col-sm-2 control-label">每题分数</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control" name="qTofScore">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">填空题</label>
-                            <label class="col-sm-2 control-label">数量</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control" name="qFillNum">
-                            </div>
-                            <label class="col-sm-2 control-label">每题分数</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control" name="qFillScore">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">简答题</label>
-                            <label class="col-sm-2 control-label">数量</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control" name="qSaqNum">
-                            </div>
-                            <label class="col-sm-2 control-label">每题分数</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control" name="qSaqScore">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">编程题</label>
-                            <label class="col-sm-2 control-label">数量</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control" name="qProgramNum">
-                            </div>
-                            <label class="col-sm-2 control-label">每题分数</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control" name="qProgramScore">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="box-footer">
-                    <button class="btn btn-primary" id="saveBtn">保存</button>
-                    <a href="javascript:history.go(0)" class="btn btn-danger" id="reset">重置</a>
-                </div>
             </div>
+        </section>
+
+
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="invoice p-3 mb-3">
+                            <!-- /.card-header -->
+                            <div class="invoice-col">
+                                <form method="post" id="save-paper-form" class="form-horizontal">
+                                    <div class="card-header">
+                                        <div class="card-title">单选题</div>
+                                    </div><br>
+                                    <div class="form-group row">
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="qChoiceNum" autocomplete="off"
+                                                   placeholder="数量">
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="qChoiceScore"
+                                                   autocomplete="off" placeholder="每题分值">
+                                        </div>
+                                    </div>
+
+                                    <div class="card-header">
+                                        <div class="card-title">多选题</div>
+                                    </div><br>
+                                    <div class="form-group row">
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="qMulChoiceNum" autocomplete="off"
+                                                   placeholder="数量">
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="qMulChoiceScore"
+                                                   autocomplete="off" placeholder="每题分值">
+                                        </div>
+                                    </div>
+
+                                    <div class="card-header">
+                                        <div class="card-title">判断题</div>
+                                    </div><br>
+                                    <div class="form-group row">
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="qTofNum" autocomplete="off"
+                                                   placeholder="数量">
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="qTofScore"
+                                                   autocomplete="off" placeholder="每题分值">
+                                        </div>
+                                    </div>
+
+                                    <div class="card-header">
+                                        <div class="card-title">填空题</div>
+                                    </div><br>
+                                    <div class="form-group row">
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="qFillNum" autocomplete="off"
+                                                   placeholder="数量">
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="qFillScore"
+                                                   autocomplete="off" placeholder="每题分值">
+                                        </div>
+                                    </div>
+
+                                    <div class="card-header">
+                                        <div class="card-title">简答题</div>
+                                    </div><br>
+                                    <div class="form-group row">
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="qSaqNum" autocomplete="off"
+                                                   placeholder="数量">
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="qSaqScore"
+                                                   autocomplete="off" placeholder="每题分值">
+                                        </div>
+                                    </div>
+
+                                    <div class="card-header">
+                                        <div class="card-title">编程题</div>
+                                    </div><br>
+                                    <div class="form-group row">
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="qProgramNum" autocomplete="off"
+                                                   placeholder="数量">
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" name="qProgramScore"
+                                                   autocomplete="off" placeholder="每题分值">
+                                        </div>
+                                    </div>
+
+                                </form>
+                            </div>
+                            <div class="card-footer clearfix bg-white">
+                                <div class="form-group float-right">
+                                    <a href="javascript:history.go(0)" class="btn btn-warning"
+                                       id="reset">重置</a>&nbsp;
+                                    <button class="btn btn-primary" id="saveBtn">保存</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.card -->
+                </div>
+            </div><!-- /.row -->
         </section>
     </div>
     <!-- 引入footer -->
