--- a/oes-core/src/main/resources/templates/teacher/question/save-modal.html
+++ b/oes-core/src/main/resources/templates/teacher/question/save-modal.html
@@ -12,41 +12,34 @@
                 <div class="form-group">
                     <form id="save-form">
                         <div class="form-group">
-                            <label>名称 </label>
-                            <textarea class="form-control" name="questionName" rows="2"></textarea>
+                            <textarea class="form-control" name="questionName" rows="2" placeholder="题目名称"
+                                      autocomplete="off"></textarea>
                         </div>
                         <div class="form-group">
-                            <label>选项A </label>
-                            <input class="form-control" name="optionA"/>
+                            <input class="form-control" name="optionA" placeholder="选项A (非选择题不用填写)" autocomplete="off"/>
                         </div>
                         <div class="form-group">
-                            <label>选项B </label>
-                            <input class="form-control" name="optionB"/>
+                            <input class="form-control" name="optionB" placeholder="选项B (非选择题不用填写)" autocomplete="off"/>
                         </div>
                         <div class="form-group">
-                            <label>选项C </label>
-                            <input class="form-control" name="optionC"/>
+                            <input class="form-control" name="optionC" placeholder="选项C (非选择题不用填写)" autocomplete="off"/>
                         </div>
                         <div class="form-group">
-                            <label>选项D </label>
-                            <input class="form-control" name="optionD"/>
+                            <input class="form-control" name="optionD" placeholder="选项D (非选择题不用填写)" autocomplete="off"/>
                         </div>
                         <div class="form-group">
-                            <label>答案 </label>
-                            <textarea class="form-control" name="answer" rows="2"></textarea>
+                            <textarea class="form-control" name="answer" rows="2" placeholder="答案"
+                                      autocomplete="off"></textarea>
                         </div>
                         <div class="form-group">
-                            <label>所属课程 </label>
-                            <select class="courseSelect" id="save-course" name="courseId"></select>
+                            <select class="courseSelect" id="save-course" name="courseId" autocomplete="off"></select>
                             <!-- 动态获取数据 -->
                         </div>
                         <div class="form-group">
-                            <label>类型 </label>
                             <select class="typeSelect" id="save-type" name="typeId"></select>
                             <!-- 动态获取数据 -->
                         </div>
                         <div class="form-group">
-                            <label>难易度 </label>
                             <select class="form-control difficulty" name="difficulty">
                                 <option value="1">简单</option>
                                 <option value="2">一般</option>
@@ -54,14 +47,12 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label>解析 </label>
-                            <input class="form-control remark" name="remark"/>
+                            <input class="form-control remark" name="remark" placeholder="题目解析" autocomplete="off"/>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onclick="saveQuestion()" data-dismiss="modal">增加
-                    </button>
+                    <button type="button" class="btn btn-primary" onclick="saveQuestion()">增加</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
                 </div>
             </div>
