--- a/oes-core/src/main/resources/templates/teacher/review/api.html
+++ b/oes-core/src/main/resources/templates/teacher/review/api.html
@@ -1,32 +1,27 @@
 <script>
+
     // 启动模态框
-    $(".editAns").click(function () {
-        $("#modifyModal").modal({
+    function goUpdate(id, score) {
+        $("#update-modal").modal({
             show: true,
             backdrop: 'static'
         });
-        const oldScore = $(this).parents('tr').find('td').eq(1).text();
-        $('#oldScore').val(oldScore);
-        // 题目id
-        const id = $(this).attr("rel");
+        // 赋值
+        $('#oldScore').val(score);
         $('#id').val(id);
-    });
+    }
 
-    $("#saveBtn").click(function () {
-        layer.confirm("确定修改分数么?", function () {
-            let oldScore = $("#oldScore").val();
-            let newScore = $("#newScore").val();
-            let id = $("#id").val();
-            $.post("/api/paper/update/score", {
-                "oldScore": oldScore,
-                "newScore": newScore,
-                "id": id,
-            }).done(function (data) {
+    // 更新请求
+    function updateScore() {
+        OesUtil.confirm("确定修改分数么", function () {
+            let data = $("#update-form").serialize();
+            $.post("/api/paper/update/score", data).done(function (data) {
                 if (data.state === "success") {
-                    layer.msg("修改成功!");
                     window.location.reload();
+                } else {
+                    toastr.error(data.message);
                 }
             })
         });
-    });
+    }
 </script>
