--- a/oes-core/src/main/resources/templates/teacher/review/list.html
+++ b/oes-core/src/main/resources/templates/teacher/review/list.html
@@ -6,7 +6,6 @@
     <%include("../../include/css.html"){}%>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
-
 <div class="wrapper">
     <!-- 引入头部 -->
     <%include("../include/header.html"){}%>
@@ -14,39 +13,71 @@
     <%include("../include/sider.html",{name:"review"}){}%>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
-
-        <section class="content">
-            <form method="get" action="/teacher/reviewRes" style="z-index: 999; position: relative">
-                <div class="form-group col-sm-12">
-                    <label class="control-label col-sm-2" for="paperId"><h4 style="font-weight: 800">请选择试卷名称</h4>
-                    </label>
-                    <div class="col-sm-8">
-                        <select class="form-control " id="paperId" name="paperId">
-                            <option value="">请选择</option>
-                            <% for( paper in paperList ){ %>
-                            <option value="${paper.id}">${paper.paperName}</option>
-                            <% } %>
-                        </select>
-                        <button id="search" class="form-control btn btn-vk btn-flat">查找</button>
-                        <% if(isNotEmpty(message)){ %>
-                        <h4 style="color: red;text-align: center"><b>${message}</b></h4>
-                        <% } %>
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1>试卷复查</h1>
                     </div>
                 </div>
-            </form>
+            </div>
         </section>
 
+        <!-- table 部分 -->
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <!-- Horizontal Form -->
+                        <div class="card card-info">
+                            <div class="card-header">
+                                <h3 class="card-title">请选择试卷名称</h3>
+                            </div>
+                            <!-- /.card-header -->
+                            <!-- form start -->
+                            <form class="form-horizontal" method="get" action="/teacher/reviewRes">
+                                <div class="card-body">
+                                    <div class="form-group">
+                                        <label for="paperId" class="col-sm-2 control-label">场次</label>
+                                        <select class="form-control " id="paperId" name="paperId">
+                                            <option value="">请选择</option>
+                                            <% for( paper in paperList ){ %>
+                                            <option value="${paper.id}">${paper.paperName}</option>
+                                            <% } %>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="col-sm-offset-2 col-sm-10">
+                                            <div class="form-check">
+                                                <% if(isNotEmpty(message)){ %>
+                                                <h4 style="color: red;text-align: center"><b>${message}</b></h4>
+                                                <% } %>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- /.card-body -->
+                                <div class="card-footer">
+                                    <button id="search" class="form-control btn btn-success">查找</button>
+                                </div>
+                                <!-- /.card-footer -->
+                            </form>
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                </div><!-- /.row -->
+            </div>
+        </section>
     </div>
     <!-- 引入footer -->
     <%include("../../include/footer.html"){}%>
 </div>
 <!-- 引入全局 js 脚本文件 -->
 <% include("../../include/js.html"){} %>
-<script src="/static/plugins/echarts/echarts.min.js"></script>
-<script src="/static/plugins/layer/layer.js"></script>
 </body>
 <script>
     // select2
-    $('#paperId').select2({width: "100%"});
+    $('#paperId').select2({width: "100%", theme: "bootstrap4"});
 </script>
 </html>
