--- a/oes-core/src/main/resources/templates/teacher/self/api.html
+++ b/oes-core/src/main/resources/templates/teacher/self/api.html
@@ -1,14 +1,17 @@
 <script>
-    $(function () {
-        $("#updateBtn").click(function () {
+
+    // 修改请求
+    function updatePass() {
+        OesUtil.confirm("确定修改密码吗？", function () {
             let data = $("#update-form").serialize();
             $.post("/api/teacher/update/pass", data, function (data) {
                 if (data.state === "success") {
                     window.location.href = "/"
                 } else {
-                    layer.msg(data.message);
+                    toastr.error(data.message);
                 }
             })
-        });
-    });
+        })
+    }
+
 </script>
