--- a/oes-core/src/main/resources/templates/teacher/self/update-pass.html
+++ b/oes-core/src/main/resources/templates/teacher/self/update-pass.html
@@ -3,50 +3,111 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>修改密码</title>
-    <!-- 引入全局 css 文件 -->
+    <title>OES | 个人中心</title>
+    <!-- css style -->
     <%include("../../include/css.html"){}%>
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
-
+<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
-    <!-- 引入头部 -->
-    <%include("../include/header.html"){}%>
+    <!-- 顶部导航栏部分 -->
+    <%include("../../teacher/include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <%layout("../include/sider.html",{name:"update-pass"}){}%>
-    <!-- 右侧内容部分 -->
+    <%layout("../../teacher/include/sider.html",{name:"update-pass"}){}%>
+
+    <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
-        <section class="content">
-            <div class="box">
-                <div class="box-header with-border">
-                    <h3 class="box-title">修改密码</h3>
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <div class="container-fluid">
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1>个人设置</h1>
+                    </div>
+                    <div class="col-sm-6">
+                        <ol class="breadcrumb float-sm-right">
+                            <li class="breadcrumb-item"><a href="#">个人设置</a>
+                            </li>
+                        </ol>
+                    </div>
                 </div>
-                <div class="box-body">
-                    <form method="post" id="update-form">
-                        <div class="form-group">
-                            <label for="oldPassword">原始密码</label>
-                            <input id="oldPassword" type="password" name="oldPassword" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="password">新密码</label>
-                            <input type="password" id="password" name="password" class="form-control">
-                            <input type="hidden" name="id" value="${session.teacher.id}">
-                        </div>
-                    </form>
-                </div>
-                <div class="box-footer">
-                    <button id="updateBtn" class="btn btn-primary">保存</button>
-                </div>
-            </div>
+            </div><!-- /.container-fluid -->
         </section>
+
+        <!-- Main content -->
+        <section class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6">
+                        <!-- Profile Image -->
+                        <div class="card card-primary card-outline">
+                            <div class="card-body box-profile">
+                                <div class="text-center">
+                                    <img class="profile-user-img img-fluid img-circle"
+                                         src="/webjars/AdminLTE/3.0.0/dist/img/avatar5.png"
+                                         alt="User profile picture">
+                                </div>
+
+                                <h3 class="profile-username text-center">${session.teacher.name}</h3>
+
+                                <p class="text-muted text-center">${session.teacher.workNumber}</p>
+
+                                <ul class="list-group list-group-unbordered mb-3">
+                                    <li class="list-group-item">
+                                        <b>职级</b> <a class="float-right">${session.teacher.job}</a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <b>性别</b> <a class="float-right">${session.teacher.sex}</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- /.card-body -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="card-title">修改密码</h3>
+                            </div>
+                            <!-- form start -->
+                            <form role="form" id="update-form">
+                                <div class="card-body">
+                                    <div class="form-group">
+                                        <label for="oldPassword">旧密码</label>
+                                        <input type="hidden" name="id" value="${session.teacherId}">
+                                        <input type="password" name="oldPassword" class="form-control" id="oldPassword"
+                                               placeholder="旧密码">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="password">新密码</label>
+                                        <input type="password" name="password" class="form-control" id="password"
+                                               placeholder="新密码">
+                                    </div>
+                                </div>
+                                <!-- /.card-body -->
+                                <div class="card-footer">
+                                    <button type="button" onclick="updatePass()" class="btn btn-primary pull-right">修改
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                        <!-- /.nav-tabs-custom -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+            </div><!-- /.container-fluid -->
+        </section>
+        <!-- /.content -->
     </div>
     <!-- 引入footer -->
-    <%include("../../include/footer.html"){} %>
+    <%include("../../include/footer.html"){}%>
 </div>
 <!-- 引入全局 js 脚本文件 -->
 <%include("../../include/js.html"){}%>
-<script src="/static/plugins/jquery-validation/jquery.validate.js"></script>
-<!-- 接口 -->
-<%include("api.html"){}%>
+<script src="/static/js/OesUtil.js"></script>
+<!-- 接口 -->】
+<% include("api.html"){} %>
 </body>
 </html>
